# ray_tracing

./: Cargo.toml  README.md  build.rs
src/: main.rs  math.rs  test.comp.glsl
src/cpu/: job.rs  mod.rs  multi.rs  single.rs
