[package]
name = "ray_tracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmp = "0.5.0"
glam = "0.21.2"
rand = "0.8.5"
num_cpus = "1.13.1"

env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.13.1", features = ["spirv"] }
pollster = "0.2.5"
bytemuck = { version = "1.11.0", features = ["derive"] }
shaderc = "0.8.0"

